infrastructure/prod/k8s/elasticsearch/elasticsearch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aikernel-data
  labels:
    name: aikernel-data
    purpose: data-storage
    environment: production
    istio-injection: enabled
